[workspace]
# Using version 2 to avoid unifying features. For more info, read:
#   https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/blockifier", "crates/native_blockifier"]

[workspace.package]
version = "0.8.0-rc.0"
edition = "2021"
repository = "https://github.com/starkware-libs/blockifier/"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0.0"
ark-ec = "0.4.2"
ark-ff = "0.4.0-alpha.7"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
assert_matches = "1.5.0"
cached = "0.44.0"
cairo-lang-casm = "2.7.0-rc.2"
cairo-lang-runner = "2.7.0-rc.2"
cairo-lang-starknet-classes = "2.7.0-rc.2"
cairo-lang-utils = "2.7.0-rc.2"
cairo-vm = "1.0.0-rc5"
criterion = "0.3"
derive_more = "0.99.17"
glob = "0.3.1"
indexmap = "2.1.0"
itertools = "0.10.3"
keccak = "0.1.3"
log = "0.4"
num-bigint = "0.4"
num-integer = "0.1.45"
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
once_cell = "1.19.0"
papyrus_storage = "0.4.0-dev.4"
phf = { version = "0.11", features = ["macros"] }
pretty_assertions = "1.2.1"
pyo3 = "0.19.1"
pyo3-log = "0.8.1"
rand = "0.8"
regex = "1.10.4"
rstest = "0.17.0"
serde = "1.0.184"
serde_json = "1.0.81"
sha2 = "0.10.8"
sha3 = "0.10.6"
starknet-types-core = { version = "0.1.5", features = ["hash", "prime-bigint"] }
starknet_api = "0.13.0-rc.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tempfile = "3.7.0"
test-case = "2.2.2"
thiserror = "1.0.37"
tikv-jemallocator = "0.5.4"

[workspace.lints.rust]
future-incompatible = "deny"
nonstandard-style = "deny"
rust-2018-idioms = "deny"
unused = "deny"
warnings = "deny"

[workspace.lints.clippy]
as_conversions = "deny"
