[package]
name = "blockifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is how they instructed to use their package.
anyhow = "1.0.66"
cairo-rs =  { git = "https://github.com/lambdaclass/cairo-rs.git" }
num-bigint = "0.4"
#starknet_api =  { git = "https://github.com/starkware-libs/starknet-api.git" }
starknet_api =  { path = "../../papyrus/crates/starknet_api" }

[dev-dependencies]
pretty_assertions = "1.2.1"
