[package]
name = "blockifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
# This is how they instructed to use their package.
cairo-rs =  { git = "https://github.com/lambdaclass/cairo-rs.git" }
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.81" , features = ["arbitrary_precision"]}
starknet_api =  { git = "https://github.com/starkware-libs/starknet-api" }

[dev-dependencies]
pretty_assertions = "1.2.1"
