[package]
name = "blockifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cairo-rs =  { git = "https://github.com/lambdaclass/cairo-rs.git" } # This is how they instructed to use their package.
derive_more = {version = "0.99.17"}
indexmap = { version = "1.9.2" }
num-bigint = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.81" , features = ["arbitrary_precision"]}
starknet_api =  { git = "https://github.com/starkware-libs/starknet-api", features=["testing"] }
thiserror = "1.0.37"

[dev-dependencies]
assert_matches = { version = "1.5.0" }
pretty_assertions = "1.2.1"
