[package]
name = "blockifier"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "The transaction-executing component in the Starknet sequencer."

[lints]
workspace = true

[features]
testing = ["rstest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-secp256r1.workspace = true
cached.workspace = true
cairo-felt.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-utils.workspace = true
cairo-vm.workspace = true
derive_more.workspace = true
indexmap.workspace = true
itertools.workspace = true
keccak.workspace = true
log.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha3.workspace = true
starknet_api = { workspace = true, features = ["testing"] }
starknet-crypto.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
phf.workspace = true
ctor.workspace = true

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
test-case.workspace = true
