[package]
name = "native_blockifier"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "A Bridge between the Rust blockifier crate and Python."

# Required for `cargo test` to work with Pyo3.
# On Python, make sure to compile this with the extension-module feature enabled.
# https://pyo3.rs/v0.19.1/faq#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
[features]
extension-module = ["pyo3/extension-module"]


[lib]
name = "native_blockifier"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
# Point to the release and main's merge-base until the publish cycle is complete.
blockifier = { git = "https://github.com/starkware-libs/blockifier", rev = "96f70c0", features = [
    "testing",
] }
cairo-lang-starknet.workspace = true
cairo-vm.workspace = true
indexmap.workspace = true
log.workspace = true
num-bigint.workspace = true
papyrus_storage = { version = "0.2.0-rc1", features = ["testing"] }
pyo3 = { version = "0.19.1", features = ["num-bigint", "hashbrown"] }
pyo3-log = "0.8.1"
serde_json = { workspace = true, features = ["arbitrary_precision"] }
# SN API before the start of the merge cycle.
starknet_api = { version = "0.6.0-rc1", features = ["testing"] }
thiserror.workspace = true

[dev-dependencies]
cached.workspace = true
tempfile.workspace = true
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
path = "bench/blockifier_bench.rs"
name = "blockifier_bench"
harness = false
