[package]
name = "blockifier_macros"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Macros for the Blockifier."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
thiserror.workspace = true
quote.workspace = true
proc-macro2 = "1.0.67"
